--- a/compiled/tesoro/manifests/tesoro-bundle.yml
+++ b/compiled/tesoro/manifests/tesoro-bundle.yml
@@ -21,6 +21,8 @@ spec:
       labels:
         name: tesoro
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       serviceAccountName: tesoro
       terminationGracePeriodSeconds: 30
