--- a/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/catalogue-db-bundle.yml
@@ -22,5 +22,7 @@ spec:
       labels:
         name: catalogue-db
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
