--- a/compiled/dev-sockshop/manifests/payment-bundle.yml
+++ b/compiled/dev-sockshop/manifests/payment-bundle.yml
@@ -22,5 +22,7 @@ spec:
       labels:
         name: payment
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
