--- a/compiled/dev-sockshop/manifests/session-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/session-db-bundle.yml
@@ -21,5 +21,7 @@ spec:
       labels:
         name: session-db
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
