--- a/compiled/examples/manifests/filebeat-bundle.yml
+++ b/compiled/examples/manifests/filebeat-bundle.yml
@@ -15,6 +15,8 @@ spec:
       labels:
         name: filebeat
     spec:
+      affinity:
+        podAntiAffinity: {}
       hostNetwork: true
       restartPolicy: Always
       serviceAccountName: filebeat
