--- a/compiled/mysql/manifests/mysql-bundle.yml
+++ b/compiled/mysql/manifests/mysql-bundle.yml
@@ -17,6 +17,8 @@ spec:
       labels:
         name: mysql
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
