--- a/compiled/prod-sockshop/manifests/carts-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/carts-db-bundle.yml
@@ -22,6 +22,8 @@ spec:
       labels:
         name: carts-db
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
