--- a/compiled/prod-sockshop/manifests/shipping-bundle.yml
+++ b/compiled/prod-sockshop/manifests/shipping-bundle.yml
@@ -21,6 +21,8 @@ spec:
       labels:
         name: shipping
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
