--- a/compiled/sock-shop/manifests/frontend-bundle.yml
+++ b/compiled/sock-shop/manifests/frontend-bundle.yml
@@ -22,5 +22,7 @@ spec:
       labels:
         name: frontend
     spec:
+      affinity:
+        podAntiAffinity: {}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
