--- a/compiled/sock-shop/manifests/rabbit-mq-service.yml
+++ b/compiled/sock-shop/manifests/rabbit-mq-service.yml
@@ -8,6 +8,10 @@ metadata:
   namespace: sock-shop
 spec:
   ports:
+    - name: management
+      port: 15672
+      protocol: TCP
+      targetPort: management
     - name: rabbitmq
       port: 5672
       protocol: TCP
