--- a/compiled/argocd/manifests/argo-cd.yml
+++ b/compiled/argocd/manifests/argo-cd.yml
@@ -3535,7 +3535,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  annotations: null
+  annotations:
   labels:
     app: redis-ha
     chart: redis-ha-4.12.17
@@ -3567,7 +3567,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  annotations: null
+  annotations:
   labels:
     app: redis-ha
     chart: redis-ha-4.12.17
@@ -3840,7 +3840,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       serviceAccountName: argo-cd-redis-ha-haproxy
-      tolerations: null
+      tolerations:
       volumes:
         - configMap:
             name: argo-cd-redis-ha-configmap
@@ -4566,7 +4566,7 @@ spec:
               name: data
             - mountPath: /health
               name: health
-        - args: null
+        - args:
           env:
             - name: REDIS_ADDR
               value: redis://localhost:6379
@@ -4591,7 +4591,7 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 3
           resources: {}
-          volumeMounts: null
+          volumeMounts:
       initContainers:
         - args:
             - /readonly-config/init.sh
@@ -4632,7 +4632,7 @@ spec:
     type: RollingUpdate
   volumeClaimTemplates:
     - metadata:
-        annotations: null
+        annotations:
         name: data
       spec:
         accessModes:
