--- a/compiled/dev-sockshop/manifests/rabbit-mq-bundle.yml
+++ b/compiled/dev-sockshop/manifests/rabbit-mq-bundle.yml
@@ -24,5 +24,26 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - image: rabbitmq:3.6.8-management
+          imagePullPolicy: IfNotPresent
+          name: rabbit-mq
+          ports:
+            - containerPort: 15672
+              name: management
+              protocol: TCP
+            - containerPort: 5672
+              name: rabbitmq
+              protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+                - DAC_OVERRIDE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
