--- a/compiled/dev-sockshop/manifests/user-db-bundle.yml
+++ b/compiled/dev-sockshop/manifests/user-db-bundle.yml
@@ -23,6 +23,25 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - image: weaveworksdemos/user-db:0.3.0
+          imagePullPolicy: IfNotPresent
+          name: user-db
+          ports:
+            - containerPort: 27017
+              name: mongo
+              protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+              drop:
+                - all
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp-volume
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
