--- a/compiled/examples/manifests/filebeat-bundle.yml
+++ b/compiled/examples/manifests/filebeat-bundle.yml
@@ -17,6 +17,52 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - args:
+            - -c
+            - /etc/filebeat.yml
+            - -e
+          env:
+            - name: ELASTICSEARCH_HOST
+              value: elasticsearch
+            - name: ELASTICSEARCH_PASSWORD
+              value: changeme
+            - name: ELASTICSEARCH_PORT
+              value: '9200'
+            - name: ELASTICSEARCH_USERNAME
+              value: elastic
+            - name: ELASTIC_CLOUD_AUTH
+              value: ''
+            - name: ELASTIC_CLOUD_ID
+              value: ''
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          image: docker.elastic.co/beats/filebeat:7.12.1
+          imagePullPolicy: IfNotPresent
+          name: filebeat
+          resources:
+            limits:
+              memory: 200Mi
+            requests:
+              cpu: 100m
+              memory: 100Mi
+          securityContext:
+            runAsUser: 0
+          volumeMounts:
+            - mountPath: /etc/filebeat.yml
+              name: config
+              readOnly: true
+              subPath: filebeat.yml
+            - mountPath: /usr/share/filebeat/data
+              name: data
+            - mountPath: /var/lib/docker/containers
+              name: varlibdockercontainers
+              readOnly: true
+            - mountPath: /var/log
+              name: varlog
+              readOnly: true
       hostNetwork: true
       restartPolicy: Always
       serviceAccountName: filebeat
