--- a/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
+++ b/compiled/postgres-proxy/manifests/postgres-proxy-bundle.yml
@@ -26,6 +26,37 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - args:
+            - -instances=$(CLOUDSQL_INSTANCE_NAME)=tcp:0.0.0.0:5432
+          command:
+            - /cloud_sql_proxy
+          env:
+            - name: CLOUDSQL_INSTANCE_NAME
+              value: example:instance
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /opt/secrets/service_account_file
+          image: gcr.io/cloudsql-docker/gce-proxy:1.16
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
+              port: postgresql
+            timeoutSeconds: 1
+          name: postgres-proxy
+          ports:
+            - containerPort: 5432
+              name: postgresql
+              protocol: TCP
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsUser: 2
+          volumeMounts:
+            - mountPath: /opt/secrets
+              name: secrets
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
