--- a/compiled/pritunl/manifests/pritunl-mongo-bundle.yml
+++ b/compiled/pritunl/manifests/pritunl-mongo-bundle.yml
@@ -19,6 +19,62 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - env:
+            - name: MONGODB_DATABASE
+              value: pritunl
+            - name: MONGODB_DISABLE_SYSTEM_LOG
+              value: 'no'
+            - name: MONGODB_ENABLE_DIRECTORY_PER_DB
+              value: 'no'
+            - name: MONGODB_ENABLE_IPV6
+              value: 'no'
+            - name: MONGODB_PASSWORD
+              value: _3sbjfMZm3GOcfIu7c_bKdmzZuc_gO0Dgn6CfKbYMgk
+            - name: MONGODB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: mongodb-root-password
+                  name: pritunl-mongo
+            - name: MONGODB_SYSTEM_LOG_VERBOSITY
+              value: '0'
+            - name: MONGODB_USERNAME
+              value: pritunl
+          image: docker.io/bitnami/mongodb:4.2.6-debian-10-r23
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            exec:
+              command:
+                - mongo
+                - --eval
+                - db.adminCommand('ping')
+            failureThreshold: 3
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
+          name: pritunl-mongo
+          ports:
+            - containerPort: 27017
+              name: mongo
+              protocol: TCP
+          readinessProbe:
+            exec:
+              command:
+                - mongo
+                - --eval
+                - db.adminCommand('ping')
+            failureThreshold: 3
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1001
+          volumeMounts:
+            - mountPath: /bitnami/mongodb
+              name: datadir
       restartPolicy: Always
       securityContext:
         fsGroup: 1001
@@ -33,15 +89,3 @@ spec:
     rollingUpdate:
       partition: 0
     type: RollingUpdate
-  volumeClaimTemplates:
-    - metadata:
-        labels:
-          name: datadir
-        name: datadir
-      spec:
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 10Gi
-        storageClassName: standard
