--- a/compiled/prod-sockshop/manifests/carts-db-bundle.yml
+++ b/compiled/prod-sockshop/manifests/carts-db-bundle.yml
@@ -24,6 +24,26 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - image: mongo
+          imagePullPolicy: IfNotPresent
+          name: carts-db
+          ports:
+            - containerPort: 27017
+              name: mongo
+              protocol: TCP
+          securityContext:
+            capabilities:
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp-volume
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       volumes:
