--- a/compiled/prod-sockshop/manifests/payment-bundle.yml
+++ b/compiled/prod-sockshop/manifests/payment-bundle.yml
@@ -24,5 +24,42 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - image: weaveworksdemos/payment:0.4.3
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /health
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
+          name: payment
+          ports:
+            - containerPort: 80
+              name: http
+              protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /health
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
