--- a/compiled/sock-shop/manifests/catalogue-bundle.yml
+++ b/compiled/sock-shop/manifests/catalogue-bundle.yml
@@ -24,5 +24,46 @@ spec:
     spec:
       affinity:
         podAntiAffinity: {}
+      containers:
+        - args:
+            - -port=80
+          command:
+            - /app
+          image: weaveworksdemos/catalogue:0.3.5
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /health
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 5
+          name: catalogue
+          ports:
+            - containerPort: 80
+              name: http
+              protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /health
+              port: http
+              scheme: HTTP
+            initialDelaySeconds: 0
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 3
+          securityContext:
+            capabilities:
+              add:
+                - NET_BIND_SERVICE
+              drop:
+                - all
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 10001
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
