--- a/compiled/examples/manifests/logstash-config.yml
+++ b/compiled/examples/manifests/logstash-config.yml
@@ -1,12 +1,7 @@
 apiVersion: v1
 data:
-  logstash.yml: 'log.level: info
-
-    queue.max_bytes: 4gb
-
-    queue.type: persisted
-
-    http.host: 0.0.0.0'
+  logstash.yml: "log.level: info\nqueue.max_bytes: 4gb\nqueue.type: persisted\nhttp.host:\
+    \ 0.0.0.0"
   pipelines.yml: "- pipeline.id: example\n  path.config: \"/usr/share/logstash/pipeline/example.conf\"\
     \n  pipeline.workers: 1\n  pipeline.batch.size: 200\n  queue.type: persisted"
 kind: ConfigMap
