--- a/compiled/examples/manifests/plain-plain-connection-non-b64.yml
+++ b/compiled/examples/manifests/plain-plain-connection-non-b64.yml
@@ -6,5 +6,5 @@ metadata:
   name: plain-plain-connection-non-b64
   namespace: examples
 stringData:
-  CONNECTION: postgresql://myUser:myPass/database
+  CONNECTION: postgresql://myUser/database
 type: Opaque
