--- a/compiled/vault/manifests/vault-bundle.yml
+++ b/compiled/vault/manifests/vault-bundle.yml
@@ -38,24 +38,15 @@ spec:
               weight: 1
       containers:
         - args:
-            - 'cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;
-
-              [ -n "${HOST_IP}" ] && sed -Ei "s|HOST_IP|${HOST_IP?}|g" /tmp/storageconfig.hcl;
-
-              [ -n "${POD_IP}" ] && sed -Ei "s|POD_IP|${POD_IP?}|g" /tmp/storageconfig.hcl;
-
-              [ -n "${HOSTNAME}" ] && sed -Ei "s|HOSTNAME|${HOSTNAME?}|g" /tmp/storageconfig.hcl;
-
-              [ -n "${API_ADDR}" ] && sed -Ei "s|API_ADDR|${API_ADDR?}|g" /tmp/storageconfig.hcl;
-
-              [ -n "${TRANSIT_ADDR}" ] && sed -Ei "s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g"
-              /tmp/storageconfig.hcl;
-
-              [ -n "${RAFT_ADDR}" ] && sed -Ei "s|RAFT_ADDR|${RAFT_ADDR?}|g" /tmp/storageconfig.hcl;
-
-              /usr/local/bin/docker-entrypoint.sh vault server -config=/tmp/storageconfig.hcl
-
-              '
+            - "cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;\n\
+              [ -n \"${HOST_IP}\" ] && sed -Ei \"s|HOST_IP|${HOST_IP?}|g\" /tmp/storageconfig.hcl;\n\
+              [ -n \"${POD_IP}\" ] && sed -Ei \"s|POD_IP|${POD_IP?}|g\" /tmp/storageconfig.hcl;\n\
+              [ -n \"${HOSTNAME}\" ] && sed -Ei \"s|HOSTNAME|${HOSTNAME?}|g\" /tmp/storageconfig.hcl;\n\
+              [ -n \"${API_ADDR}\" ] && sed -Ei \"s|API_ADDR|${API_ADDR?}|g\" /tmp/storageconfig.hcl;\n\
+              [ -n \"${TRANSIT_ADDR}\" ] && sed -Ei \"s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g\"\
+              \ /tmp/storageconfig.hcl;\n[ -n \"${RAFT_ADDR}\" ] && sed -Ei \"s|RAFT_ADDR|${RAFT_ADDR?}|g\"\
+              \ /tmp/storageconfig.hcl;\n/usr/local/bin/docker-entrypoint.sh vault\
+              \ server -config=/tmp/storageconfig.hcl\n"
           command:
             - /bin/sh
             - -ec
