--- a/inventory/classes/components/echo-server.yml
+++ b/inventory/classes/components/echo-server.yml
@@ -65,7 +65,7 @@ parameters:
       # Healthchecks definitions
       healthcheck:
         liveness:
-          type: http
+          type: HTTP
           port: http
           httpHeaders:
           - name: Host
@@ -73,7 +73,7 @@ parameters:
           path: /_health
           timeout_seconds: 3
         readiness:
-          type: http
+          type: HTTP
           port: http
           path: /_ready
           timeout_seconds: 5
