--- a/inventory/classes/components/weaveworks/payment.yml
+++ b/inventory/classes/components/weaveworks/payment.yml
@@ -18,12 +18,12 @@ parameters:
             - NET_BIND_SERVICE
       healthcheck:
         readiness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 3
         liveness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 5
