--- a/inventory/classes/components/weaveworks/queue-master.yml
+++ b/inventory/classes/components/weaveworks/queue-master.yml
@@ -10,12 +10,12 @@ parameters:
           service_port: 80
       healthcheck:
         readiness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 3
         liveness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 5
