--- a/inventory/classes/components/weaveworks/shipping.yml
+++ b/inventory/classes/components/weaveworks/shipping.yml
@@ -17,13 +17,13 @@ parameters:
             - NET_BIND_SERVICE
       healthcheck:
         readiness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 3
           initial_delay_seconds: 120
         liveness:
-          type: http
+          type: HTTP
           port: http
           path: /health
           timeout_seconds: 5
