--- a/compiled/examples/manifests/filebeat-config.yml
+++ b/compiled/examples/manifests/filebeat-config.yml
@@ -13,6 +13,7 @@ data:
 kind: ConfigMap
 metadata:
   labels:
+    app.kapicorp.dev/component: filebeat
     name: filebeat
   name: filebeat
   namespace: examples
