--- a/compiled/examples/manifests/mysql-secret.yml
+++ b/compiled/examples/manifests/mysql-secret.yml
@@ -5,7 +5,8 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: mysql
     name: mysql
-  name: mysql-5ebf7f24
+  name: mysql-69e349a2
   namespace: examples
 type: Opaque
