--- a/compiled/examples/manifests/plain-base64-secret.yml
+++ b/compiled/examples/manifests/plain-base64-secret.yml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: plain-base64
   name: plain-base64
+  namespace: examples
 stringData:
   CONNECTION: xyz://SW9wR3dGb2Q4M0tQTVdDWFJHUUU=_xx_someotherstuff
 type: Opaque
