--- a/compiled/examples/manifests/plain-plain-connection-secret.yml
+++ b/compiled/examples/manifests/plain-plain-connection-secret.yml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: plain-plain-connection
   name: plain-plain-connection
+  namespace: examples
 stringData:
   CONNECTION: postgresql://myUser:myPass/database
 type: Opaque
