--- a/compiled/examples/manifests/trivy-secret.yml
+++ b/compiled/examples/manifests/trivy-secret.yml
@@ -1,9 +1,8 @@
 apiVersion: v1
-data:
-  GITHUB_TOKEN: ''
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: trivy
     name: trivy
   name: trivy
   namespace: examples
