--- a/compiled/gke-pvm-killer/manifests/gke-pvm-killer-secret.yml
+++ b/compiled/gke-pvm-killer/manifests/gke-pvm-killer-secret.yml
@@ -4,6 +4,7 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: gke-pvm-killer
     name: gke-pvm-killer
   name: gke-pvm-killer
   namespace: gke-pvm-killer
