--- a/compiled/mysql/manifests/mysql-secret.yml
+++ b/compiled/mysql/manifests/mysql-secret.yml
@@ -5,7 +5,8 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: mysql
     name: mysql
-  name: mysql-a61a1e7c
+  name: mysql-0fa06206
   namespace: mysql
 type: Opaque
