--- a/compiled/postgres-proxy/manifests/postgres-proxy-secret.yml
+++ b/compiled/postgres-proxy/manifests/postgres-proxy-secret.yml
@@ -4,6 +4,7 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: postgres-proxy
     name: postgres-proxy
   name: postgres-proxy
   namespace: postgres-proxy
