--- a/compiled/prod-sockshop/manifests/sockshop.kapicorp.com-secret.yml
+++ b/compiled/prod-sockshop/manifests/sockshop.kapicorp.com-secret.yml
@@ -7,4 +7,5 @@ metadata:
   labels:
     name: sockshop.kapicorp.com
   name: sockshop.kapicorp.com
+  namespace: prod-sockshop
 type: kubernetes.io/tls
