--- a/compiled/tesoro/manifests/tesoro-secret.yml
+++ b/compiled/tesoro/manifests/tesoro-secret.yml
@@ -6,6 +6,7 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: tesoro
     name: tesoro
   name: tesoro
   namespace: tesoro
