--- a/compiled/tutorial/manifests/echo-server-bundle.yml
+++ b/compiled/tutorial/manifests/echo-server-bundle.yml
@@ -32,7 +32,7 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
           image: jmalloc/echo-server
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
             httpGet:
@@ -96,7 +96,7 @@ spec:
       volumes:
         - configMap:
             defaultMode: 360
-            name: echo-server-caa935ba
+            name: echo-server-88d0d989
           name: config
         - name: secret
           secret:
