--- a/compiled/tutorial/manifests/echo-server-secret.yml
+++ b/compiled/tutorial/manifests/echo-server-secret.yml
@@ -5,6 +5,7 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: echo-server
     name: echo-server
   name: echo-server
   namespace: tutorial
