--- a/compiled/examples/manifests/filebeat-rbac.yml
+++ b/compiled/examples/manifests/filebeat-rbac.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: filebeat
     name: filebeat
@@ -10,6 +12,8 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: filebeat
     name: filebeat
@@ -38,6 +42,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: filebeat
     name: filebeat
@@ -46,7 +52,6 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: filebeat
 subjects:
   - kind: ServiceAccount
     name: filebeat
