--- a/compiled/examples/manifests/trivy-rbac.yml
+++ b/compiled/examples/manifests/trivy-rbac.yml
@@ -1,8 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: trivy
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 0.18.1
     name: trivy
   name: trivy
   namespace: examples
@@ -10,8 +14,12 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: trivy
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 0.18.1
     name: trivy
   name: trivy
   namespace: examples
@@ -28,8 +36,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: trivy
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 0.18.1
     name: trivy
   name: trivy
   namespace: examples
