--- a/compiled/examples/manifests/trivy-service.yml
+++ b/compiled/examples/manifests/trivy-service.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: trivy
     app.kubernetes.io/component: go
