--- a/compiled/pritunl/manifests/pritunl-config.yml
+++ b/compiled/pritunl/manifests/pritunl-config.yml
@@ -7,6 +7,7 @@ data:
 kind: ConfigMap
 metadata:
   labels:
+    app.kapicorp.dev/component: pritunl
     name: pritunl
   name: pritunl
   namespace: pritunl
