--- a/compiled/pritunl/manifests/pritunl-mongo-rbac.yml
+++ b/compiled/pritunl/manifests/pritunl-mongo-rbac.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: pritunl-mongo
     name: pritunl-mongo
