--- a/compiled/pritunl/manifests/pritunl-mongo-secret.yml
+++ b/compiled/pritunl/manifests/pritunl-mongo-secret.yml
@@ -4,6 +4,7 @@ data:
 kind: Secret
 metadata:
   labels:
+    app.kapicorp.dev/component: pritunl-mongo
     name: pritunl-mongo
   name: pritunl-mongo
   namespace: pritunl
