--- a/compiled/sock-shop/manifests/rabbit-mq-service.yml
+++ b/compiled/sock-shop/manifests/rabbit-mq-service.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: rabbit-mq
     app.kubernetes.io/part-of: sock-shop
