--- a/compiled/sock-shop/manifests/session-db-service.yml
+++ b/compiled/sock-shop/manifests/session-db-service.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: session-db
     name: session-db
