--- a/compiled/tesoro/manifests/tesoro-rbac.yml
+++ b/compiled/tesoro/manifests/tesoro-rbac.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: tesoro
     name: tesoro
@@ -10,6 +12,8 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: tesoro
     name: tesoro
@@ -38,6 +42,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: tesoro
     name: tesoro
@@ -46,6 +52,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
+  name: tesoro
 subjects:
   - kind: ServiceAccount
     name: tesoro
