--- a/compiled/tutorial/manifests/echo-server-service.yml
+++ b/compiled/tutorial/manifests/echo-server-service.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: echo-server
     name: echo-server
