--- a/compiled/vault/manifests/vault-config.yml
+++ b/compiled/vault/manifests/vault-config.yml
@@ -10,6 +10,7 @@ data:
 kind: ConfigMap
 metadata:
   labels:
+    app.kapicorp.dev/component: vault
     name: vault
   name: vault
   namespace: vault
