--- a/compiled/vault/manifests/vault-rbac.yml
+++ b/compiled/vault/manifests/vault-rbac.yml
@@ -1,8 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 1.7.3
     name: vault
   name: vault
   namespace: vault
@@ -10,8 +14,12 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 1.7.3
     name: vault
   name: vault
   namespace: vault
@@ -30,8 +38,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 1.7.3
     name: vault
   name: vault
   namespace: vault
@@ -47,8 +59,12 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 1.7.3
     name: vault
   name: vault
   namespace: vault
@@ -66,8 +82,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
+    app.kubernetes.io/component: go
+    app.kubernetes.io/version: 1.7.3
     name: vault
   name: vault
   namespace: vault
