--- a/compiled/vault/manifests/vault-service.yml
+++ b/compiled/vault/manifests/vault-service.yml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
     app.kubernetes.io/component: go
     app.kubernetes.io/version: 1.7.3
-    name: vault-internal
+    name: vault
   name: vault
   namespace: vault
 spec:
@@ -30,6 +32,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
     app.kubernetes.io/component: go
@@ -59,6 +63,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    manifests.kapicorp.com/generated: 'true'
   labels:
     app.kapicorp.dev/component: vault
     app.kubernetes.io/component: go
