--- a/compiled/kapicorp-terraform-admin/terraform/google_project.tf.json
+++ b/compiled/kapicorp-terraform-admin/terraform/google_project.tf.json
@@ -1,11 +1,11 @@
 {
   "resource": {
-    "gcp_project_id": {
+    "google_project": {
       "main": {
-        "name": "kapicorp-project-123",
+        "name": "kapicorp-terraform-admin",
         "org_id": "az1oDhA50eU5d2ToHhNFrSaWNqAa1iaosXyZfd6SZQ2",
         "auto_create_network": false,
-        "project_id": "kapicorp-project-123",
+        "project_id": "kapicorp-terraform-admin",
         "billing_account": "jpzaR_ArxEkpIIljqRpFstsP_yw34RR07D6lAynfwIw"
       }
     }
